--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,31 +41,19 @@ jobs:
       - name: Read version from plugin.json
         run: echo "VERSION=$(jq -r .Version plugin.json)" >> $GITHUB_ENV
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          # This token is provided by Actions
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ env.VERSION }}
-          release_name: v${{ env.VERSION }}
-          draft: false
-          prerelease: false
-
       - name: Get Asset name
         run: |
           export PKG=$(ls build/ | grep zip)
           set -- $PKG
           echo "name=$1" >> $GITHUB_ENV
 
-      - name: Upload Release (zip) to GitHub
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+      - name: Publish GitHub Release
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/${{ env.name }}
-          asset_name: ${{ env.name }}
-          asset_content_type: application/zip
+          tag_name: v${{ env.VERSION }}
+          name: v${{ env.VERSION }}
+          draft: false
+          prerelease: false
+          files: build/${{ env.name }}
